--- a/marketing-resource/xml/Header/Footer/header.html
+++ b/marketing-resource/xml/Header/Footer/header.html
@@ -41,7 +41,7 @@
                     <dt><a id="nav_product_network-networking" href="https://www.azure.cn/home/features/networking/" title="Virtual Networks">Virtual Networks</a></dt>
                     <dd>An in the cloud virtual machine network that can be easily expanded to local networks through site-to-site VPNs</dd>
                     <dt><a id="nav_product_network-load-balancer" href="https://www.azure.cn/home/features/load-balancer/" title="Load Balancer">Load Balancer</a></dt>
-                    <dd>Enable your application to increase its availability and network performance</dd>
+                    <dd>Enabling your application to increase its availability and network performance</dd>
                     <dt><a id="nav_product_network-application-gateway" href="https://www.azure.cn/home/features/application-gateway/" title="Application Gateway">Application Gateway</a></dt>
                     <dd>Through the provided HTTP load balancer and delivery, you can set up a highly-available, highly-expandable website</dd>
                     <dt><a id="nav_product_network-vpn-gateway" href="https://www.azure.cn/home/features/vpn-gateway/" title="VPN Gateway">VPN Gateway</a></dt>
@@ -134,7 +134,7 @@
                     <dt><a id="nav_product_IOT-iot-suite" href="https://www.azure.cn/home/features/iot-suite/" title="IoT Kit">IoT Kit</a></dt>
                     <dd>Capture and analyze unused data to improve business results</dd>
                     <dt><a id="nav_product_IOT-iot-hub" href="https://www.azure.cn/home/features/iot-hub/" title="IoT Center">IoT Center</a></dt>
-                    <dd>Connect, monitor, and control millions of IoT assets, increase the security of IoT solutions</dd>
+                    <dd>Connect, monitor and control millions of IoT assets, and improve the security of IoT solutions</dd>
                     <dt><a id="nav_product_IOT-eve" href="https://www.azure.cn/home/features/event-hubs/" title="Event Center">Event Center</a></dt>
                     <dd>Highly extensible event publishing-subscription gathering device that can transmit millions of events to an application routine</dd>
                     <dt><a id="nav_product_IOT-stream-analytics" href="https://www.azure.cn/home/features/stream-analytics/" title="Stream Analytics">Stream Analytics</a></dt>
