--- a/marketing-resource/xml/Header/Footer/footer.html
+++ b/marketing-resource/xml/Header/Footer/footer.html
@@ -69,7 +69,7 @@
                   <li>
                       <h3 id="footer_account" class="menu-title footer-title icon-arrow-down-sharp2">Account</h3>
                       <ul class="menu-child">
-                          <li><a id="footer-portal-id" href="https://portal.azure.cn/" title="Azure Portal"> Azure Portal </a></li>
+                          <li><a id="footer-portal-id" href="https://portal.azure.cn/" title="Azure portal"> Azure portal </a></li>
                           <li><a id="footer-account-id" href="https://account.windowsazure.cn/" title="Subscription and Billing"> Subscription and Billing </a></li>
                           <li><a id="footer-ea-id" href="http://ea.windowsazure.cn/" title="Company Web Portal"> Company Web Portal </a></li>
                       </ul>
