knowing change to know

--- a/marketing-resource/xml/Header&Footer/header.html
+++ b/marketing-resource/xml/Header&Footer/header.html
@@ -13,7 +13,7 @@
       </div>
       <nav class="nav auto-scroll loading" data-fullscreen="true" data-top="header">
         <ul class="accordian-menu" data-accordiandisabled="desktop" data-accordianinteraction="exclusive">
-          <li class="nav-know-azure"><a class="menu-title icon-arrow-down-sharp2" id="nav_know-azure" href="#" title="Getting to know Azure"> <span>Knowing Azure</span> </a><ul class="sub-menu menu-child full-width auto-height" data-child=".level3-menu|.navigation-promotion">
+          <li class="nav-know-azure"><a class="menu-title icon-arrow-down-sharp2" id="nav_know-azure" href="#" title="Getting to know Azure"> <span>Know Azure</span> </a><ul class="sub-menu menu-child full-width auto-height" data-child=".level3-menu|.navigation-promotion">
               <li>
                 <div class="level3-container">
                   <dl class="level3-menu">
