--- a/marketing-resource/xml/Header&Footer/header.html
+++ b/marketing-resource/xml/Header&Footer/header.html
@@ -188,7 +188,7 @@
                   </dl>
                 </div>
               </li>
-              <li class=""><a id="nav_product_manage-and-secure" class="menu-title icon-arrow-down-sharp2" href="#service_tab10" title="Monitor + Management" data-toggle="tab">Monitor + Management</a><div class="menu-child tab-panel level3-container" id="service_tab10">
+              <li class=""><a id="nav_product_manage-and-secure" class="menu-title icon-arrow-down-sharp2" href="#service_tab10" title="Management Tools" data-toggle="tab">Management Tools</a><div class="menu-child tab-panel level3-container" id="service_tab10">
                   <dl class="level3-menu">
                     <dt><a id="nav_product_manage-and-secure-azure-portal" href="https://www.azure.cn/home/features/azure-portal/" title="Azure portal">Azure portal</a></dt>
                     <dd>Build, manage, and monitor all Azure products in a single, unified console</dd>
@@ -457,7 +457,7 @@
                   </dl>
                 </div>
               </li>
-              <li class=""><a id="nav_documentation_management-and-security" class="menu-title icon-arrow-down-sharp2" href="#documents_tab12" data-href="#documents_tab12" title="Monitor + Management" data-toggle="tab"> Monitor + Management </a><div class="menu-child tab-panel level3-container" id="documents_tab12">
+              <li class=""><a id="nav_documentation_management-and-security" class="menu-title icon-arrow-down-sharp2" href="#documents_tab12" data-href="#documents_tab12" title="Management Tools" data-toggle="tab"> Management Tools</a><div class="menu-child tab-panel level3-container" id="documents_tab12">
                   <dl class="level3-menu">
                     <dt><a id="nav_documentation_management-and-security-automation" href="https://docs.azure.cn/zh-cn/automation/" title="">Automation</a></dt>
                     <dd>Simplify cloud management with process automation</dd>
