--- a/marketing-resource/xml/Header&Footer/header.html
+++ b/marketing-resource/xml/Header&Footer/header.html
@@ -140,7 +140,7 @@
                     <ul class="level4-menu hidden-sm hidden-xs">
                       <li><a id="nav_product_ai-face" href="https://www.azure.cn/home/features/cognitive-services/face/" title="Face API">Face API</a> <span>Detect, identify, analyze, organize, and tag faces in photos</span></li>
                       <li><a id="nav_product_ai-computer-vision" href="https://www.azure.cn/home/features/cognitive-services/computer-vision/" title="Computer Vision API">Computer Vision API</a> <span>Distill actionable information from images</span></li>
-                      <li><a id="nav_product_ai-emotion" href="https://www.azure.cn/home/features/cognitive-services/emotion/" title="Mood Recognition API">Mood Recognition API</a> <span>Achieve a personalized user experience through mood recognition</span></li>
+                      <li><a id="nav_product_ai-emotion" href="https://www.azure.cn/home/features/cognitive-services/emotion/" title="Mood Recognition API">Mood Recognition API</a> <span>achieve a personalized user experience through mood recognition</span></li>
                     </ul>
                     <dt class="hidden-md hidden-lg"><a id="nav_product_ai-face-mobile" href="https://www.azure.cn/home/features/cognitive-services/face/" title="Face API">Face API</a></dt>
                     <dd class="hidden-md hidden-lg">Detect, recognize, organize, and tag faces in images</dd>
@@ -407,7 +407,7 @@
                       <li><a id="nav_documentation_ai-emotion" href="https://docs.azure.cn/zh-cn/cognitive-services/emotion/home" title="Mood Recognition API">Mood Recognition API</a> <span>achieve a personalized user experience through mood recognition</span></li>
                     </ul>
                     <dt class="hidden-md hidden-lg"><a id="nav_documentation_ai-face-mobile" href="https://www.azure.cn/home/features/cognitive-services/face/" title="Face API">Face API</a></dt>
-                    <dd class="hidden-md hidden-lg">Detect, identify, analyze, organize, and tag faces in photos</dd>
+                    <dd class="hidden-md hidden-lg">Detect, recognize, organize, and tag faces in images</dd>
                     <dt class="hidden-md hidden-lg"><a id="nav_documentation_ai-computer-vision-mobile" href="https://www.azure.cn/home/features/cognitive-services/computer-vision/" title="Computer Vision API">Computer Vision API</a></dt>
                     <dd class="hidden-md hidden-lg">Distill actionable information from images</dd>
                     <dt class="hidden-md hidden-lg"><a id="nav_documentation_ai-emotion-mobile" href="https://www.azure.cn/home/features/cognitive-services/emotion/" title="Mood Recognition API">Mood Recognition API</a></dt>
