add en-us for trustcenter.cn for consistent experience

--- a/marketing-resource/xml/Header&Footer/header.html
+++ b/marketing-resource/xml/Header&Footer/header.html
@@ -538,7 +538,7 @@
                     <dd>Azure service status report</dd>
                     <dt><a id="nav_support_legal" href="https://www.azure.cn/support/legal/" title="Legal information">Legal information</a></dt>
                     <dd>Relevant legal information about operating Azure services</dd>
-                    <dt><a id="nav_support_trust" href="//www.trustcenter.cn" title="Trust Center" target="_blank">Trust Center</a></dt>
+                    <dt><a id="nav_support_trust" href="//www.trustcenter.cn/en-us/" title="Trust Center" target="_blank">Trust Center</a></dt>
                     <dd>Answers to your data privacy and security concerns, conveniently look over the specifics for purchasing and using Azure</dd>
                     <dt><a id="nav_support_aipa" href="https://www.azure.cn/support/azure-ip-advantage/" title="Azure intellectual property protection plan">Azure IP Advantage</a></dt>
                     <dd>Protecting your innovation in the cloud</dd>
