update for recent header updates

--- a/marketing-resource/xml/Header&Footer/header.html
+++ b/marketing-resource/xml/Header&Footer/header.html
@@ -94,12 +94,24 @@
                   <dl class="level3-menu">
                     <dt><a id="nav_product_web-and-mobile-app-service" href="https://www.azure.cn/home/features/app-service/" title="App Service">App Service</a></dt>
                     <dd>Quickly create powerful cloud apps for web and mobile</dd>
+					<ul class="level4-menu hidden-sm hidden-xs">
+                        <li>
+                            <a id="nav_product_app_service_web_app" href="https://www.azure.cn/home/features/app-service/web-apps/" title="Web Apps">Web Apps</a>
+                            <span>Quickly create and deploy mission critical Web apps at scale</span>
+                        </li>
+                        <li>
+                            <a id="nav_product_app_service_mobile_app" href="https://www.azure.cn/home/features/app-service/mobile-apps/" title="Mobile Apps">Mobile Apps</a>
+                            <span>Build and host the backend for any mobile app</span>
+                        </li>
+                        <li>
+                            <a id="nav_product_app_service_api_app" href="https://www.azure.cn/home/features/app-service/api-apps/" title="API Apps">API Apps</a>
+                            <span>Easily build and consume Cloud APIs</span>
+                        </li>
+                    </ul>
                     <dt><a id="nav_product_web-and-mobile-cdn" href="https://www.azure.cn/home/features/cdn/" title="CDN">CDN</a></dt>
                     <dd>Ensure secure, reliable content delivery with extensive global coverage</dd>
                     <dt><a id="nav_product_media-and-CDN-media" href="https://www.azure.cn/home/features/media-services/" title="Media Services">Media Services</a></dt>
                     <dd>Encode, store, and stream video and audio at scale</dd>
-                    <!--dt><a id="nav_product_web-and-mobile-mobile" href="https://www.azure.cn/home/features/mobile-services/" title="Mobile Services">Mobile Services</a></dt>
-                    <dd>Provides backend scaling and security for any mobile apps</dd-->
                   </dl>
                 </div>
               </li>
@@ -168,7 +180,7 @@
               </li>
               <li class=""><a id="nav_product_hybrid-integrated" class="menu-title icon-arrow-down-sharp2" href="#service_tab8" title="Integration" data-toggle="tab">Integration</a><div class="menu-child tab-panel level3-container" id="service_tab8">
                   <dl class="level3-menu">
-                    <dt><a id="nav_product_hybrid-integrated-service-bus" href="https://www.azure.cn/home/features/messaging/" title="Service Bus">Service Bus</a></dt>
+                    <dt><a id="nav_product_hybrid-integrated-service-bus" href="https://www.azure.cn/home/features/service-bus/" title="Service Bus">Service Bus</a></dt>
                     <dd>Connect across private and public cloud environments</dd>
                     <dt><a id="nav_product_hybrid-integrated-sql-server-stretch-database" href="https://www.azure.cn/home/features/sql-server-stretch-database/" title="SQL Server Stretch Database ">SQL Server Stretch Database </a></dt>
                     <dd>Dynamically stretch on-premises SQL Server databases to Azure</dd>
@@ -181,7 +193,7 @@
                   <dl class="level3-menu">
                     <dt><a id="nav_product_manage-and-secure-key-vault" href="https://www.azure.cn/home/features/key-vault/" title="Key Vault">Key Vault</a></dt>
                     <dd>Safeguard and maintain control of keys and other secrets</dd>
-                    <dt><a id="nav_product_IAM-ad" href="https://www.azure.cn/home/features/identity/" title="Azure Active Directory">Azure Active Directory</a></dt>
+                    <dt><a id="nav_product_IAM-ad" href="https://www.azure.cn/home/features/active-directory/" title="Azure Active Directory">Azure Active Directory</a></dt>
                     <dd>Synchronize on-premises directories and enable single sign-on</dd>
                     <dt><a id="nav_product_IAM-multi-factor-authentication" href="https://www.azure.cn/home/features/multi-factor-authentication/" title="Multi-Factor Authentication">Multi-Factor Authentication</a></dt>
                     <dd>Add security for your data and apps without adding hassles for users</dd>
@@ -194,7 +206,7 @@
                     <dd>Build, manage, and monitor all Azure products in a single, unified console</dd>
                     <dt><a id="nav_product_manage-and-secure-automation" href="https://www.azure.cn/home/features/automation/" title="Automation">Automation</a></dt>
                     <dd>Simplify cloud management with process automation</dd>
-                    <dt><a id="nav_product_manage-and-secure-back-up" href="https://www.azure.cn/home/features/back-up/" title="Backup">Backup</a></dt>
+                    <dt><a id="nav_product_manage-and-secure-back-up" href="https://www.azure.cn/home/features/backup/" title="Backup">Backup</a></dt>
                     <dd>Simple and reliable server backup to the cloud</dd>
                     <dt><a id="nav_product_manage-and-secure-site-recovery" href="https://www.azure.cn/home/features/site-recovery/" title="Site Recovery">Site Recovery</a></dt>
                     <dd>Orchestrate protection and recovery of private clouds</dd>
