Update SHD, WD translation.

--- a/marketing-resource/xml/Mail/PIA.html
+++ b/marketing-resource/xml/Mail/PIA.html
@@ -49,18 +49,18 @@
   <tr>
     <td colspan="6" valign="top">
     <br>
-    <h1>Invitation to purchase a standard Pay-in-Advance subscription for <span class="en">Microsoft Azure</span> operated by 21Vianet
+    <h1>An invitation for you to purchase Standard Pay-in-Advance subscription for <span class="en">Microsoft Azure</span> operated by 21Vianet
     </h1>
     <br>
     <br>
     <h4>Dear user,</h4>
-    <h3>Thank you for applying to purchase the standard Pay-in-Advance service for Microsoft Azure operated by 21Vianet. We are happy to inform you that you have passed the real name authentication. Please follow the steps below to complete the registration process.</h3>
+    <h3>Thank you for applying Microsoft Azure Standard Pay-in-Advance service operated by 21Vianet. We are pleased to inform you that you have passed the real name authentication. Please follow the steps below to complete the registration process.</h3>
 	<br>
     <br>
     <table width="600" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td width="100"><h3>Step 1:</h3></td>
-    <td><h3>Click to enter the <a href="http://www.azure.cn/zh-cn/pricing/enter-promo-code-form/">activation code page</a>,
+    <td><h3>Click <a href="http://www.azure.cn/pricing/enter-promo-code-form/">here</a> to enter into the activation code page,
 	</h3></td>
   </tr>
 
@@ -72,7 +72,7 @@
 
   <tr>
     <td>&#160;</td>
-    <td><h3>or click directly on the following URL:
+    <td><h3>or click the following URL:
         <br><a href="<<Account Portal URL>>?offer=<<Offer ID>>&promocode=<<Promotional Code>>"><<Account Portal URL>>?offer=<<Offer ID>>&promocode=<<Promotional Code>></a></span>.
         </h3>
     </h2></td>
@@ -80,11 +80,11 @@
 
     <tr>
     <td><h3>Step 2:</h3></td>
-    <td><h3>Create a user account and pay to complete registration. You can click on <a href="https://www.azure.cn/pricing/billing/azure-pia-application-and-signup/?wt.mc_id=InviteEmailACNBOIWDPIA0001">Details on Registration Steps</a> or <a href="https://www.azure.cn/support/faq/#registration">Registration FAQs</a> for more details on the registration process and help for you to complete registration quickly.</h3></td>
+    <td><h3>Create a user account and pay to complete registration. You can click on <a href="https://www.azure.cn/pricing/billing/azure-pia-application-and-signup/?wt.mc_id=InviteEmailACNBOIWDPIA0001">Registration Steps</a> or <a href="https://www.azure.cn/support/faq/#registration">Registration FAQs</a> for more details about the registration process to help you completing the registration.</h3></td>
   </tr>
     <tr>
     <td><h3>Step 3:</h3></td>
-    <td><h3>Use the account you registered in the previous step to sign in to the <a href="https://manage.windowsazure.cn"><span class="en">Azure</span> Management Portal</a> or <a href="https://www.azure.cn/azure-cloud-assistant/"><span class="en">Azure</span> Cloud Assistant <span class="en">app</span></a></h3></td>  </tr>
+    <td><h3>Use the account you registered in the previous step to sign into the <a href="https://manage.windowsazure.cn"><span class="en">Azure</span> Management Portal</a> or <a href="https://www.azure.cn/azure-cloud-assistant/"><span class="en">Azure</span> Cloud Assistant <span class="en">app</span></a></h3></td>  </tr>
     
 	<tr>
     <td>&#160;</td>
@@ -99,10 +99,9 @@
 </table>
     <h2>&#160;</h2>
     <br>
-    <h3>The enclosed application code is valid from <<Promotional Code>> to <<Valid days>> (seven days). If you do not use the activation code within the validity period, you can contact us via the service hotlines on 400-089-0365 or +86-10-84563652 to reset it.
-	</h3>
+    <h3>The activation code <<Promotional Code>> will be valid till <<Valid days>> (7 days). If you do not use the activation code within the period, you can contact us via the service hotlines 400-089-0365 or +86-10-84563652 to reset it.</h3>
 	<br>
-	<h3>Scan the following QR code to download the <span class="en">Azure</span> Cloud Helper <span class="en">app</span> and follow the official <span class="en">Microsoft</span> Cloud Technology account, manage <span class="en">Azure</span> services at any time, and get the latest information on <span class="en">Azure</span>.</h3>
+	<h3>Scan the QR code to download the <span class="en">Azure</span> Cloud Assistant <span class="en">app</span> and follow <span class="en">Microsoft</span> Cloud Technology official account. Manage <span class="en">Azure</span> services at any time, and stay up to date with the latest <span class="en">Azure</span> news.</h3>
 	<table class="qrcode" border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td style="padding-right: 20px;">
@@ -116,17 +115,17 @@
 	<div style="clear:both" ></div>
 	<br>
 	
-	<h3>Please refer to the <a href="http://www.azure.cn/starter-guide?wt.mc_id=InviteEmail">Getting Started Guide</a> to get started quickly with <span class="en">Azure</span>.</h3>
-	<h3>For detailed pricing, please visit the <a href="http://www.azure.cn/pricing/overview?wt.mc_id=InviteEmail">Pricing page</a>. For more technical content, please visit <a href="http://www.azure.cn/documentation?wt.mc_id=InviteEmail">Technical Documentation</a>.</h3>
-	<h3>Any questions? Please visit the<a href="https://social.msdn.microsoft.com/Forums/zh-cn/home?forum=windowsazurezhchs"> <span class="en">Azure</span> Forum</a> to ask questions and get answers from experts.</h3>
+	<h3>Visit <a href="http://www.azure.cn/starter-guide?wt.mc_id=InviteEmail">Getting Started</a> to get started quickly with <span class="en">Azure</span>.</h3>
+	<h3>Visit <a href="http://www.azure.cn/pricing/overview?wt.mc_id=InviteEmail">Pricing page</a> for pricing details. Visit <a href="http://www.azure.cn/documentation?wt.mc_id=InviteEmail">Documentation</a> for technical documentation.</h3>
+	<h3>Questions? Please visit the<a href="https://social.msdn.microsoft.com/Forums/zh-cn/home?forum=windowsazurezhchs"> <span class="en">Azure</span> Forum</a> to ask questions and get answers from experts.</h3>
 	<br>
 	<h3>You do not need to take any action if you received this email in error. If you have any questions about using <span class="en">Azure</span>, please contact <a href="http://www.azure.cn/zh-cn/support/contact?wt.mc_id=InviteEmail">Customer Support</a>.
 	</h3>
     <br>
     <br>
        <br>
-    <h3 id="bold">Thank you for your interest in <span class="en">Azure</span>.</h3>
-    <h3>This email came from an automated delivery address. Please do not reply to this email.</h3>
+    <h3 id="bold">Thank you for your interests in <span class="en">Azure</span>.</h3>
+    <h3>Please do not reply directly to this system-generated email. </h3>
     <h3>21Vianet respects your privacy. For more information, please see our <a href="http://www.azure.cn/zh-cn/support/legal/privacy-statement?wt.mc_id=InviteEmail">Privacy Statement</a>.</h3>
     <br>
     <br>
