update for ui issue

--- a/marketing-resource/xml/Header&Footer/header.html
+++ b/marketing-resource/xml/Header&Footer/header.html
@@ -13,7 +13,7 @@
       </div>
       <nav class="nav auto-scroll loading" data-fullscreen="true" data-top="header">
         <ul class="accordian-menu" data-accordiandisabled="desktop" data-accordianinteraction="exclusive">
-          <li class="nav-know-azure"><a class="menu-title icon-arrow-down-sharp2" id="nav_know-azure" href="#" title="Getting to know Azure"> <span>Know Azure</span> </a><ul class="sub-menu menu-child full-width auto-height" data-child=".level3-menu|.navigation-promotion">
+          <li class="nav-know-azure"><a class="menu-title icon-arrow-down-sharp2" id="nav_know-azure" href="#" title="Getting to know Azure"> <span>Why Azure</span> </a><ul class="sub-menu menu-child full-width auto-height" data-child=".level3-menu|.navigation-promotion">
               <li>
                 <div class="level3-container">
                   <dl class="level3-menu">
@@ -566,7 +566,7 @@
             </ul>
           </li>
           <li class="nav-market-place"><a id="nav_market-place" href="http://market.azure.cn" target="_blank" title="Marketplace"> <span>Marketplace</span> </a></li>
-        </ul><a id="homepage-top-1rmb" class="buy-it" href="https://www.azure.cn/pricing/1rmb-trial/" title="Apply for 1RMB Trial"> <span>Apply for 1RMB Trial</span> <span class="icon-arrow-right-thin2"></span> </a> <a id="header-portal-azure-id" class="portal-link" href="https://portal.azure.cn/" title="Sign in to the Azure portal"> Azure Portal </a> <a id="homepage-top-pia" class="apply-trial" href="https://www.azure.cn/pricing/pia/" title="I want to purchase"> Purchase </a></nav>
+        </ul><a id="homepage-top-1rmb" class="buy-it" href="https://www.azure.cn/pricing/1rmb-trial/" title="1RMB Trial"> <span>1RMB Trial</span> <span class="icon-arrow-right-thin2"></span> </a> <a id="header-portal-azure-id" class="portal-link" href="https://portal.azure.cn/" title="Sign in to the Azure portal"> Azure Portal </a> <a id="homepage-top-pia" class="apply-trial" href="https://www.azure.cn/pricing/pia/" title="I want to purchase"> Purchase </a></nav>
       <div class="search-panel auto-scroll" data-fullscreen="true" data-top="header">
         <div class="azure-service-container">
           <div class="row search-input">
