change invoice to fapiao

--- a/marketing-resource/xml/Header&Footer/footer.html
+++ b/marketing-resource/xml/Header&Footer/footer.html
@@ -50,7 +50,7 @@
                           <li><a id="footer-sla-id" href="https://www.azure.cn/support/legal/sla/" title="Service Level Agreement"> Service Level Agreement </a></li>
                           <li><a id="footer-icp-id" href="https://www.azure.cn/icp/" title="ICP Filing"> ICP Filing </a></li>
                           <li><a id="footer-police-id" href="https://www.azure.cn/support/announcement/public-security-registration/" title="Public Security Registration"> Public Security Registration </a></li>
-                          <li><a id="footer-fapiao-id" href="https://www.azure.cn/pricing/billing/azure-fapiao-process/" title="Invoice Claim"> Invoice Claim </a></li>
+                          <li><a id="footer-fapiao-id" href="https://www.azure.cn/pricing/billing/azure-fapiao-process/" title="Invoice Claim"> Fapiao Claim </a></li>
                           <li><a id="footer-support-faq-id" href="https://www.azure.cn/support/faq/" title="FAQs"> FAQs </a></li>
                           <li><a id="footer-news-id" href="https://www.azure.cn/what-is-new/" title="What is New"> What is New </a></li>
                       </ul>
