--- a/marketing-resource/xml/Header&Footer/header.html
+++ b/marketing-resource/xml/Header&Footer/header.html
@@ -202,7 +202,7 @@
               </li>
               <li class=""><a id="nav_product_manage-and-secure" class="menu-title icon-arrow-down-sharp2" href="#service_tab10" title="Management Tools" data-toggle="tab">Management Tools</a><div class="menu-child tab-panel level3-container" id="service_tab10">
                   <dl class="level3-menu">
-                    <dt><a id="nav_product_manage-and-secure-azure-portal" href="https://www.azure.cn/home/features/azure-portal/" title="Azure portal">Azure portal</a></dt>
+                    <dt><a id="nav_product_manage-and-secure-azure-portal" href="https://www.azure.cn/home/features/azure-portal/" title="Azure Portal">Azure Portal</a></dt>
                     <dd>Build, manage, and monitor all Azure products in a single, unified console</dd>
                     <dt><a id="nav_product_manage-and-secure-automation" href="https://www.azure.cn/home/features/automation/" title="Automation">Automation</a></dt>
                     <dd>Simplify cloud management with process automation</dd>
