fixes according to feedbacks

--- a/marketing-resource/xml/Header&Footer/footer.html
+++ b/marketing-resource/xml/Header&Footer/footer.html
@@ -10,17 +10,17 @@
 
                           <!--li class="hidden-md hidden-lg"><a id="footer-ACA-mobile" href="http://acaservice.chinacloudsites.cn/install/aca_install.html?v=1.010006" title="Azure Cloud Assistance Mobile App"><span class="icon icon-iphone"></span>Azure Cloud Assistant Mobile Apps </a></li-->
                           <li class="hidden-md hidden-lg"><a id="footer-weixin-id" href="//mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzA4MzA1OTc1MA==&scene=110#wechat_redirect"
-                                 title="Acc. Code: MS_CEChina" data-content="微信查找公众号 <strong>Microsoft 云科技</strong>，一手掌握微软云计算最新资讯。"><i class="icon icon-weixin"></i> Acc. Code: MS_CEChina </a></li>
+                                 title="Acc. Code: MS_CEChina" data-content="Search for WeChat Public Account <strong>MS_CEChina</strong>，get the latest information on Azure Cloud Computing"><i class="icon icon-weixin"></i> WeChat Acc. of MS_CEChina </a></li>
                           <li class="hidden-md hidden-lg"><a id="footer-support-id" href="//mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzI0Njc5OTM4Mg==&scene=124#wechat_redirect"
-                                 title="Acc. Code: VNET_AzureSupport" data-content="微信查找公众号 <strong>Azure 云技术支持</strong>,快速解答技术相关问题。"><i class="icon icon-weixin"></i>Acc. Code: VNET_AzureSupport</a></li>
+                                 title="Acc. Code: VNET_AzureSupport" data-content="Search for WeChat Public Account <strong>VNET_AzureSupport</strong>, get swift answer on technical questions."><i class="icon icon-weixin"></i>WeChat Acc. of VNET_AzureSupport</a></li>
                       </ul>
                       <div class="footer-qrcode clearfix hidden-xs hidden-sm">
                           <!--div class="qrcode-wrapper mc_qr1"><span>Azure Cloud Assistant Mobile Apps</span></div-->
-                        <div class="qrcode-wrapper mc_qr2"><span> Acc. Code: MS_CEChina</span></div>
+                        <div class="qrcode-wrapper mc_qr2"><span> WeChat Acc. of MS_CEChina</span></div>
                       </div>
                       <h3 class="footer-title hidden-xs hidden-sm">Get quick support</h3>
                       <div class="footer-qrcode clearfix hidden-xs hidden-sm">
-                          <div class="qrcode-wrapper mc_qr3"><span>Acc. Code: VNET_AzureSupport</span></div>
+                          <div class="qrcode-wrapper mc_qr3"><span>WeChat Acc. of VNET_AzureSupport</span></div>
                       </div>
                   </li>
                   <li>
