Update SHD, Email, WD translation.

--- a/marketing-resource/xml/Mail/PIA.html
+++ b/marketing-resource/xml/Mail/PIA.html
@@ -5,13 +5,13 @@
 <title>STB China UX</title>
 <!-- Please DO NOT Edit below CSS -->
 <style>
- table {background-color:white; font-family:"Microsoft yahei","微软雅黑", "黑体", "SimHei","Segoe UI","Helvetica" ,Arial,sans-serif,; font-size:13px;table-layout: fixed;}
+ table {background-color:white; font-family:"Segoe UI","Microsoft yahei","微软雅黑", "黑体", "SimHei","Helvetica" ,Arial,sans-serif,; font-size:13px;table-layout: fixed;}
  table td{ vertical-align: top;}
- .en { font-family:"Segoe UI Light","Segoe UI","Helvetica", Arial,sans-serif; }
+ .en { font-family:"Segoe UI","Helvetica", Arial,sans-serif; }
  #en2 {font-family:"Segoe UI","Helvetica", Arial,sans-serif;}
- h1 {font-family:"Microsoft yahei","微软雅黑", "黑体", "SimHei","Segoe UI","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px; margin-left:30px; margin-right:30px; margin-bottom:10px;padding:0px;line-height:120%; font-variant:normal; font-style:normal; font-weight:200; font-size:22px;}
- h2 {font-family:"Microsoft yahei","微软雅黑", "黑体", "SimHei","Segoe UI","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px;margin-left:30px; padding:0px; font-size:12pt; line-height:30px;font-variant:normal; font-style:normal; font-weight:200;}
- h3 {font-family:"Microsoft yahei","微软雅黑", "黑体", "SimHei","Segoe UI","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px;margin-left:30px; padding:0px;  font-size:10pt; line-height:24px;font-variant:normal; font-style:normal; font-weight:200;}
+ h1 {font-family:"Segoe UI","Microsoft yahei","微软雅黑", "黑体", "SimHei","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px; margin-left:30px; margin-right:30px; margin-bottom:10px;padding:0px;line-height:120%; font-variant:normal; font-style:normal; font-weight:200; font-size:22px;}
+ h2 {font-family:"Segoe UI","Microsoft yahei","微软雅黑", "黑体", "SimHei","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px;margin-left:30px; padding:0px; font-size:12pt; line-height:30px;font-variant:normal; font-style:normal; font-weight:200;}
+ h3 {font-family:"Segoe UI","Microsoft yahei","微软雅黑", "黑体", "SimHei","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px;margin-left:30px; padding:0px;  font-size:10pt; line-height:24px;font-variant:normal; font-style:normal; font-weight:200;}
  #bold { font-weight:bold;}
  #boldblack{ font-weight:bold;color:black}
  h4 {color:#777;margin:0px;margin-left:30px; margin-bottom:15px; padding:0px; font-size:10pt; line-height:24px;font-variant:normal; font-style:normal; font-weight:200;}
@@ -58,9 +58,19 @@
 	<br>
     <br>
     <table width="600" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+            <td width="100"><h3>Step 1:</h3></td>
+            <td>
+                <h3>
+                    Click the following URL:
+                    <br /><a href="<<Account Portal URL>>?offer=<<Offer ID>>&promocode=<<Promotional Code>>"><<Account Portal URL>>?offer=<<Offer ID>>&promocode=<<Promotional Code>></Promotional></Offer></Account></a></span>.
+                </h3>
+                </h2>
+            </td>
+        </tr>
   <tr>
-    <td width="100"><h3>Step 1:</h3></td>
-    <td><h3>Click <a href="http://www.azure.cn/pricing/enter-promo-code-form/">here</a> to enter into the activation code page,
+    <td>&#160;</td>
+    <td><h3>Or click <a href="http://www.azure.cn/pricing/enter-promo-code-form/">here</a> to enter into the activation code page,
 	</h3></td>
   </tr>
 
@@ -70,25 +80,17 @@
     </h3></td>
   </tr>
 
-  <tr>
-    <td>&#160;</td>
-    <td><h3>or click the following URL:
-        <br><a href="<<Account Portal URL>>?offer=<<Offer ID>>&promocode=<<Promotional Code>>"><<Account Portal URL>>?offer=<<Offer ID>>&promocode=<<Promotional Code>></a></span>.
-        </h3>
-    </h2></td>
-  </tr>
-
     <tr>
     <td><h3>Step 2:</h3></td>
     <td><h3>Create a user account and pay to complete registration. You can click on <a href="https://www.azure.cn/pricing/billing/azure-pia-application-and-signup/?wt.mc_id=InviteEmailACNBOIWDPIA0001">Registration Steps</a> or <a href="https://www.azure.cn/support/faq/#registration">Registration FAQs</a> for more details about the registration process to help you completing the registration.</h3></td>
   </tr>
     <tr>
     <td><h3>Step 3:</h3></td>
-    <td><h3>Use the account you registered in the previous step to sign into the <a href="https://manage.windowsazure.cn"><span class="en">Azure</span> Management Portal</a> or <a href="https://www.azure.cn/azure-cloud-assistant/"><span class="en">Azure</span> Cloud Assistant <span class="en">app</span></a></h3></td>  </tr>
+    <td><h3>Use the account you registered in the previous step to sign into the <a href="https://manage.windowsazure.cn"><span class="en">Azure</span> Portal</a> or <a href="https://www.azure.cn/azure-cloud-assistant/"><span class="en">Azure</span> Cloud Assistant <span class="en">app</span></a></h3></td>  </tr>
     
 	<tr>
     <td>&#160;</td>
-    <td><h3>to start using Azure Cloud Services. </span>.
+    <td><h3>to start using Azure Cloud Services</span>.
     </h3></td>
   </tr>
 	<tr>
@@ -99,7 +101,7 @@
 </table>
     <h2>&#160;</h2>
     <br>
-    <h3>The activation code <<Promotional Code>> will be valid till <<Valid days>> (7 days). If you do not use the activation code within the period, you can contact us via the service hotlines 400-089-0365 or +86-10-84563652 to reset it.</h3>
+    <h3>The activation code <<Promotional Code>> will be valid till <<Valid days>> (7 days). If you do not use the activation code within the period, you can visit <a href="https://www.azure.cn/pricing/pia-waiting-list/?form-type=identityauth">here</a> to apply again, or contact us via the service hotlines 400-089-0365 or +86-10-84563652 to reset it.</h3>
 	<br>
 	<h3>Scan the QR code to download the <span class="en">Azure</span> Cloud Assistant <span class="en">app</span> and follow <span class="en">Microsoft</span> Cloud Technology official account. Manage <span class="en">Azure</span> services at any time, and stay up to date with the latest <span class="en">Azure</span> news.</h3>
 	<table class="qrcode" border="0" cellspacing="0" cellpadding="0">
