--- a/marketing-resource/xml/Mail/PIA.html
+++ b/marketing-resource/xml/Mail/PIA.html
@@ -5,13 +5,13 @@
 <title>STB China UX</title>
 <!-- Please DO NOT Edit below CSS -->
 <style>
- table {background-color:white; font-family:"Microsoft yahei","微软雅黑", "黑体", "SimHei","Segoe UI","Helvetica" ,Arial,sans-serif,; font-size:13px;table-layout: fixed;}
+ table {background-color:white; font-family:"Segoe UI","Microsoft yahei","微软雅黑", "黑体", "SimHei","Helvetica" ,Arial,sans-serif,; font-size:13px;table-layout: fixed;}
  table td{ vertical-align: top;}
- .en { font-family:"Segoe UI Light","Segoe UI","Helvetica", Arial,sans-serif; }
+ .en { font-family:"Segoe UI","Helvetica", Arial,sans-serif; }
  #en2 {font-family:"Segoe UI","Helvetica", Arial,sans-serif;}
- h1 {font-family:"Microsoft yahei","微软雅黑", "黑体", "SimHei","Segoe UI","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px; margin-left:30px; margin-right:30px; margin-bottom:10px;padding:0px;line-height:120%; font-variant:normal; font-style:normal; font-weight:200; font-size:22px;}
- h2 {font-family:"Microsoft yahei","微软雅黑", "黑体", "SimHei","Segoe UI","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px;margin-left:30px; padding:0px; font-size:12pt; line-height:30px;font-variant:normal; font-style:normal; font-weight:200;}
- h3 {font-family:"Microsoft yahei","微软雅黑", "黑体", "SimHei","Segoe UI","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px;margin-left:30px; padding:0px;  font-size:10pt; line-height:24px;font-variant:normal; font-style:normal; font-weight:200;}
+ h1 {font-family:"Segoe UI","Microsoft yahei","微软雅黑", "黑体", "SimHei","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px; margin-left:30px; margin-right:30px; margin-bottom:10px;padding:0px;line-height:120%; font-variant:normal; font-style:normal; font-weight:200; font-size:22px;}
+ h2 {font-family:"Segoe UI","Microsoft yahei","微软雅黑", "黑体", "SimHei","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px;margin-left:30px; padding:0px; font-size:12pt; line-height:30px;font-variant:normal; font-style:normal; font-weight:200;}
+ h3 {font-family:"Segoe UI","Microsoft yahei","微软雅黑", "黑体", "SimHei","Helvetica" ,Arial,sans-serif,;color:#777;margin:0px;margin-left:30px; padding:0px;  font-size:10pt; line-height:24px;font-variant:normal; font-style:normal; font-weight:200;}
  #bold { font-weight:bold;}
  #boldblack{ font-weight:bold;color:black}
  h4 {color:#777;margin:0px;margin-left:30px; margin-bottom:15px; padding:0px; font-size:10pt; line-height:24px;font-variant:normal; font-style:normal; font-weight:200;}
@@ -54,13 +54,20 @@
     <br>
     <br>
     <h4>Dear user,</h4>
-    <h3>Thank you for applying to purchase the standard Pay-in-Advance service for Microsoft Azure operated by 21Vianet. We are happy to inform you that you have passed the real name authentication. Please follow the steps below to complete the registration process.</h3>
+    <h3>Thank you for applying to purchase the standard Pay-in-Advance service for Microsoft Azure operated by 21Vianet. We are happy to inform you that you have passed the real name authentication. Please follow the steps below to complete the sign up process.</h3>
 	<br>
     <br>
     <table width="600" border="0" cellspacing="0" cellpadding="0">
-  <tr>
-    <td width="100"><h3>Step 1:</h3></td>
-    <td><h3>Click to enter the <a href="http://www.azure.cn/zh-cn/pricing/enter-promo-code-form/">activation code page</a>,
+        <tr>
+            <td width="100"><h3>Step 1:</h3></td>
+            <td>
+                <h3>Click on the following URL:<br /><a href="<<Account Portal URL>>?offer=<<Offer ID>>&promocode=<<Promotional Code>>"><<Account Portal URL>>?offer=<<Offer ID>>&promocode=<<Promotional Code>></Promotional></Offer></Account></a></span></h3>
+                </h2>
+            </td>
+        </tr>
+  <tr>F
+    <td>&#160;</td>
+    <td><h3>or click to enter the <a href="http://www.azure.cn/zh-cn/pricing/enter-promo-code-form/">activation code page</a>,
 	</h3></td>
   </tr>
 
@@ -70,25 +77,17 @@
     </h3></td>
   </tr>
 
-  <tr>
-    <td>&#160;</td>
-    <td><h3>or click directly on the following URL:
-        <br><a href="<<Account Portal URL>>?offer=<<Offer ID>>&promocode=<<Promotional Code>>"><<Account Portal URL>>?offer=<<Offer ID>>&promocode=<<Promotional Code>></a></span>.
-        </h3>
-    </h2></td>
-  </tr>
-
     <tr>
     <td><h3>Step 2:</h3></td>
-    <td><h3>Create a user account and pay to complete registration. You can click on <a href="https://www.azure.cn/pricing/billing/azure-pia-application-and-signup/?wt.mc_id=InviteEmailACNBOIWDPIA0001">Details on Registration Steps</a> or <a href="https://www.azure.cn/support/faq/#registration">Registration FAQs</a> for more details on the registration process and help for you to complete registration quickly.</h3></td>
+    <td><h3>Create a user account and pay to complete sign up. You can click on <a href="https://www.azure.cn/pricing/billing/azure-pia-application-and-signup/?wt.mc_id=InviteEmailACNBOIWDPIA0001">Details on Sign Up Steps</a> or <a href="https://www.azure.cn/support/faq/#registration">Sign Up FAQs</a> for more details on the sign up process and help for completing sign up quickly.</h3></td>
   </tr>
     <tr>
     <td><h3>Step 3:</h3></td>
-    <td><h3>Use the account you registered in the previous step to sign in to the <a href="https://manage.windowsazure.cn"><span class="en">Azure</span> Management Portal</a> or <a href="https://www.azure.cn/azure-cloud-assistant/"><span class="en">Azure</span> Cloud Assistant <span class="en">app</span></a></h3></td>  </tr>
+    <td><h3>Use the account you registered in the previous step to sign in to the <a href="https://manage.windowsazure.cn"><span class="en">Azure</span> portal</a> or <a href="https://www.azure.cn/azure-cloud-assistant/"><span class="en">Azure</span> Cloud Assistant <span class="en">app</span></a></h3></td>  </tr>
     
 	<tr>
     <td>&#160;</td>
-    <td><h3>to start using Azure Cloud Services. </span>.
+    <td><h3>to start using Azure Cloud Services</span>.
     </h3></td>
   </tr>
 	<tr>
@@ -99,8 +98,7 @@
 </table>
     <h2>&#160;</h2>
     <br>
-    <h3>The enclosed application code is valid from <<Promotional Code>> to <<Valid days>> (seven days). If you do not use the activation code within the validity period, you can contact us via the service hotlines on 400-089-0365 or +86-10-84563652 to reset it.
-	</h3>
+    <h3>The enclosed application code is valid from <<Promotional Code>> to <<Valid days>> (seven days). If you do not use the activation code within the validity period, you can reapply <a href="https://www.azure.cn/pricing/pia-waiting-list/?form-type=identityauth">here</a> or contact us via the service hotlines on 400-089-0365 or +86-10-84563652 to reset it. </a></h3>
 	<br>
 	<h3>Scan the following QR code to download the <span class="en">Azure</span> Cloud Helper <span class="en">app</span> and follow the official <span class="en">Microsoft</span> Cloud Technology account, manage <span class="en">Azure</span> services at any time, and get the latest information on <span class="en">Azure</span>.</h3>
 	<table class="qrcode" border="0" cellspacing="0" cellpadding="0">
