Partial handback from 5_07

--- a/marketing-resource/xml/Header&Footer/header.html
+++ b/marketing-resource/xml/Header&Footer/header.html
@@ -29,7 +29,7 @@
                                         <dd>List of available services for Microsoft Azure operated by 21Vianet and Global Azure</dd>
                                         <dt><a id="nav_get-started" href="https://school.azure.cn/category?filter=%7B%22curriculumDirectionId%22%3A%221%22%2C%22curriculumCategoryId%22%3A%220%22%2C%22courseCategoryId%22%3A%220%22%7D"
                                                title="Get Started " target="_blank">Get Started</a></dt>
-                                        <dd>Help you to learn about Azure, improve work efficiency, and save operating cost</dd>
+                                        <dd>Learn about using Azure to increase efficiencies and cut operational costs</dd>
                                         <dt><a id="nav_azure-webinars" href="https://www.azure.cn/webinars/" title="Azure Webinars">Azure Webinars</a></dt>
                                         <dd>Watch live demo, and participate in expert Q&amp;A</dd>
                                     </dl>
@@ -557,7 +557,7 @@
                         </ul>
                     </li>
                     <li class="nav-market-place"><a id="nav_market-place" href="http://market.azure.cn" target="_blank" title="Marketplace"> <span>Marketplace</span> </a></li>
-                </ul><a id="homepage-top-1rmb" class="buy-it" href="https://www.azure.cn/pricing/1rmb-trial/" title="1RMB Trial"> <span>1RMB Trial</span> <span class="icon-arrow-right-thin2"></span> </a> <a id="header-portal-azure-id" class="portal-link" href="https://portal.azure.cn/" title="Sign in to the Azure portal"> Sign in to the Azure portal </a> <a id="homepage-top-pia" class="apply-trial" href="https://www.azure.cn/pricing/pia/" title="I want to purchase"> I want to purchase </a></nav>
+                </ul><a id="homepage-top-1rmb" class="buy-it" href="https://www.azure.cn/pricing/1rmb-trial/" title="1RMB Trial"> <span>1RMB Trial</span> <span class="icon-arrow-right-thin2"></span> </a> <a id="header-portal-azure-id" class="portal-link" href="https://portal.azure.cn/" title="Sign in to the Azure portal"> Sign in to the Azure portal </a> <a id="homepage-top-pia" class="apply-trial" href="https://www.azure.cn/pricing/pia/" title="Purchase">Purchase</a></nav>
             <div class="search-panel auto-scroll" data-fullscreen="true" data-top="header">
                 <div class="azure-service-container">
                     <div class="row search-input">
