--- a/marketing-resource/xml/Header&Footer/header.html
+++ b/marketing-resource/xml/Header&Footer/header.html
@@ -492,7 +492,7 @@
                                     <dl class="level3-menu">
                                         <dt><a id="nav_documentation_download_tool" href="https://www.azure.cn/downloads" title="Download tool">Download tool</a></dt>
                                         <dd>Get the SDK and command line tools you need</dd>
-                                        <dt><a id="nav_documentation_download_ebook" href="https://www.azure.cn/campaigns/dotnet-application-architecture-ebooks/" title="Download .NET application architecture e-book">Download .NET application architecture e-book</a></dt>
+                                        <dt><a id="nav_documentation_download_ebook" href="https://www.azure.cn/campaigns/dotnet-application-architecture-ebooks/" title="Download .NET application architecture e-books">Download .NET application architecture e-books</a></dt>
                                         <dd><i>.NET Microservices: Guide to Architecture for Containerized .NET Applications</i> and <i>Modernizing Existing .NET Applications with Azure Cloud and Windows Containers</i></dd>
                                     </dl>
                                 </div>
